Try a different theme to reduce space of the top header

--- a/proposal.tex
+++ b/proposal.tex
@@ -28,7 +28,7 @@
 
 \mode<presentation> 
 {
-  \usetheme{Warsaw}
+  \usetheme{Frankfurt}
   \usefonttheme{serif}
   \setbeamercovered{transparent}
 }
