Change some of the section headings

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -1,8 +1,8 @@
 % !TEX Root = ../proposal.tex
 
 \appendix
-\section{Appendix}
-\subsection{Gravitational Modelling}
+\section[Appendix]{Appendix}
+\subsection[Gravity Models]{Gravitational Modelling}
 
 \begin{frame}[noframenumbering,label=astro] %----------------------------------------------%
 \frametitle{Astrodynamics}
