--- a/tex/challenges.tex
+++ b/tex/challenges.tex
@@ -1,6 +1,6 @@
 % !TEX Root = ../proposal.tex
 
-\section*{Research Challenges}
+\section*{Challenges}
 \subsection*{Previous approaches}
 
 \begin{frame}{Challenges for Optimal Transfer Design} %-----------------------------%
