--- a/proposal.tex
+++ b/proposal.tex
@@ -1,9 +1,9 @@
-%\documentclass[11pt,professionalfonts,hyperref={pdftex,pdfpagemode=none,pdfstartview=FitH}]{beamer}
-%\usepackage{times}
 \documentclass[11pt,professionalfonts]{beamer}
 % \usefonttheme{serif}
 \usepackage{presentation_packages}
 \usepackage{tikz_packages}
+
+\tdplotsetmaincoords{60}{125} % view angle in spherical coordinates
 
 \addbibresource{library.bib}
 \ExecuteBibliographyOptions{
