Turn off beamer navigation symbols

--- a/proposal.tex
+++ b/proposal.tex
@@ -45,7 +45,7 @@
   \end{beamercolorbox}}%
   \vskip0pt%
 } \setbeamercolor{box}{fg=black,bg=yellow}
-
+\setbeamertemplate{navigation symbols}{}
 
 \title[Asteroid Trajectory Design]{\large\textbf{Coupled Asteroid Trajectory Design: From Orbit to Landing}}
 
