Add some hyperlinks to appendix and back

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -317,7 +317,7 @@ Momentum transfer from solar photons striking spacecraft
     \end{block}
 \end{frame} %----------------------------------------------------------------------%
 
-\begin{frame}[noframenumbering]{Spacecraft Propulsion}%------------------------------------------------%
+\begin{frame}[noframenumbering]{Spacecraft Propulsion}\label{slide:propulsion}%------------------------------------------------%
 \begin{block}{Ideal Rocket Equation}
     Amount of propellant required for a given velocity change
     \[
@@ -329,6 +329,8 @@ Momentum transfer from solar photons striking spacecraft
     \item High exhaust speeds make electric propulsion attractive
     \item Much higher efficiency than chemical propulsion
 \end{itemize}
+\hyperlink{slide:lowthrust_vehicles}{\beamergotobutton{Low-Thrust Vehicles}}
+
 \end{frame} %----------------------------------------------------------------%
 
 % Differences when considering an asteroid - polyhedron model
