--- a/tex/challenges.tex
+++ b/tex/challenges.tex
@@ -33,7 +33,7 @@
 \begin{frame}
 \frametitle{Dynamic System Modelling}
 \begin{itemize}
-    \item Astrodynamics - motion of objects in space
+    \item Astrodynamics - motion of objects in space \hyperlink{astro}{\beamergotobutton{Intro to Astro}}
     \pause
     \item Attitude coupling is dependent on ratio \( \epsilon = \frac{l}{R} \)
         \begin{itemize}
