--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -3,7 +3,7 @@
 \section*{Introduction}
 \subsection*{Electric Propulsion}  
 
-\begin{frame} %-----------------------------%
+\begin{frame} \label{slide:lowthrust_vehicles}%-----------------------------%
 \frametitle{Low-thrust vehicles} % electric propulsion
 \begin{itemize}
     \item Low-thrust orbital transfers offer increased mission oportunities
@@ -20,6 +20,7 @@
     ~
     \includegraphics[height=0.4\textheight,width=0.5\textwidth,keepaspectratio]{figures/2016AAS/deepspace1.jpg}
 \end{center}
+\hyperlink{slide:propulsion}{\beamergotobutton{Ideal Rockets}}
 \end{frame}   %-----------------------------%
 
 \subsection*{Asteroid Missions}
