Improve thesis statement

--- a/tex/thesis_statement.tex
+++ b/tex/thesis_statement.tex
@@ -6,7 +6,7 @@
 % THESIS STATEMENT - entire dissertation should support and defend this statement
 \begin{frame}[t]{Proposed research}
     \begin{block}{Thesis Statement}
-        The application of \Emph{geometric mechanics} enables the innovative design of complex trajectories around asteroids, from orbital manuevers to landing.
+        The application of \Emph{geometric mechanics} enables the innovative design of complex trajectories around asteroids, including orbital transfers, hovering, and landing.
     \end{block}
     \pause
     \begin{itemize}
