Add button to and from the appendix

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -25,7 +25,7 @@
     
 \end{block}
 }
-
+\hyperlink{slide:system_model_challenges}{\beamergotobutton{Dynamic Challenges}}
 \end{frame} %--------------------------------------------------------------%
 
 \begin{frame}[noframenumbering,label=centrobaric]
