--- a/tex/challenges.tex
+++ b/tex/challenges.tex
@@ -30,7 +30,7 @@
 \end{itemize}
 \end{frame}   %-----------------------------%
 
-\begin{frame}
+\begin{frame}\label{slide:system_model_challenges}
 \frametitle{Dynamic System Modelling}
 \begin{itemize}
     \item Astrodynamics - motion of objects in space \hyperlink{astro}{\beamergotobutton{Intro to Astro}}
