More detail about problems with open loop control

--- a/tex/challenges.tex
+++ b/tex/challenges.tex
@@ -82,7 +82,11 @@
     \end{itemize}
 \end{itemize}
 \pause
-\begin{block}{Open Loop}
-    All approaches not robust to obstacles or failures
+\begin{block}{Drawback of Open Loop Control}
+    \begin{itemize}
+        \item Not robust to errors in dynamic model
+        \item Unable to handle failures
+        \item Unable to react to varying obstacle or constraints
+    \end{itemize}
 \end{block}
 \end{frame} %-------------------------------------%
