--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -54,33 +54,39 @@
           grid/.style={very thin,gray!50},
           axis/.style={->,blue,thick},scale=0.6]
 
-        % nodes for the poincare section
-        \node[label=above:\(\Sigma\)] (upper_right) at (0,5,5) {};
-        \node[] (upper_left) at (0,1,5) {};
-        \node[] (lower_left) at (0,1,0) {};
-        \node[] (lower_right) at (0,5,0) {};
+        % draw periodic orbit
+        \onslide<4->{
+            % draw a periodic orbit
+            \coordinate (center) at (0,0,2);
+            \node[above left] (x0) at (0,2,2) {\(\vecbf{x}_0\)};
+            \filldraw (0,2,2) circle (3pt);
+        }
 
-        % draw poincare section
-        \draw[poincare] (upper_right.center) -- (upper_left.center) -- (lower_left.center) -- (lower_right.center) -- (upper_right.center);
+        \onslide<5->{
+            \tdplotdrawarc[orbit hidden]{(center)}{2}{90}{190}{}{};
+            \tdplotdrawarc[orbit,<-]{(center)}{2}{-170}{90}{}{};
+        }
 
-        \pause
-        % draw a periodic orbit
-        \coordinate (center) at (0,0,2);
-        \node[above left] (x0) at (0,2,2) {\(\vecbf{x}_0\)};
-        \filldraw (0,2,2) circle (3pt);
+        \onslide<6->{
+            % nodes for the poincare section
+            \node[label=above:\(\Sigma\)] (upper_right) at (0,5,5) {};
+            \node[] (upper_left) at (0,1,5) {};
+            \node[] (lower_left) at (0,1,0) {};
+            \node[] (lower_right) at (0,5,0) {};
 
-        \pause
-        \tdplotdrawarc[orbit hidden]{(center)}{2}{90}{190}{}{};
-        \tdplotdrawarc[orbit,<-]{(center)}{2}{-170}{90}{}{};
+            % draw poincare section
+            \draw[poincare] (upper_right.center) -- (upper_left.center) -- (lower_left.center) -- (lower_right.center) -- (upper_right.center);
+        }
+        
+        \onslide<7->{
+            \node[below right] (x1) at (0,3,2) {\(\vecbf{x}_1\)};
+            \filldraw (0,3,2) circle (3pt);
+        }
 
-        \pause
-        \node[below right] (x1) at (0,3,2) {\(\vecbf{x}_1\)};
-        \filldraw (0,3,2) circle (3pt);
-
-        \pause
-        \tdplotdrawarc[orbit hidden]{(center)}{3}{90}{199}{}{};
-        \tdplotdrawarc[orbit,<-]{(center)}{3}{-161}{90}{}{};
-
+        \onslide<8->{
+            \tdplotdrawarc[orbit hidden]{(center)}{3}{90}{199}{}{};
+            \tdplotdrawarc[orbit,<-]{(center)}{3}{-161}{90}{}{};
+        }
     \end{tikzpicture}
     \end{scaletikzpicturetowidth}
 \end{center}
