Add Isp to ideal rocket equation

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -321,7 +321,7 @@ Momentum transfer from solar photons striking spacecraft
 \begin{block}{Ideal Rocket Equation}
     Amount of propellant required for a given velocity change
     \[
-        \Delta V = - v_e \ln\parenth{\frac{m_f}{m_i}}
+        \Delta V = - g_0 I_{sp} \ln\parenth{\frac{m_f}{m_i}}
     \]
 \end{block}
 
