Add detail about attitude representations

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -363,6 +363,11 @@ Momentum transfer from solar photons striking spacecraft
     \end{itemize}
 \end{column}
 \end{columns}
+\pause
+\begin{block}{Minimal Representations}
+    All minimal attitude representations have kinematic singularities and are not suitable for large rotations.
+\end{block}
+
 \end{frame}
 
 \begin{frame}[noframenumbering]{Attitude Parameterizations}
