add a pause for the figures

--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -81,12 +81,12 @@
         \item Independently navigate hazards and handle possible failures
     \end{itemize}
 \end{itemize}
-\visible<2->{
+\pause
 \begin{center}
     \includegraphics[width=0.5\textwidth,height=0.35\textheight,keepaspectratio]{figures/2016ACC/hubble.jpg}\hfill
     \includegraphics[width=0.5\textwidth,height=0.4\textheight,keepaspectratio]{figures/osires_rex.png}
 \end{center}
-}
+
 \end{frame}   %-----------------------------%
 
 % why go to asteroids
