Modify sectino titles

--- a/tex/challenges.tex
+++ b/tex/challenges.tex
@@ -1,7 +1,7 @@
 % !TEX Root = ../proposal.tex
 
-\section*{Challenges}
-\subsection*{Previous approaches}
+\section[Challenges]{Challenges in asteroid missions}
+\subsection[Previous Approaches]{Drawbacks to previous approaches}
 
 \begin{frame}{Challenges for Optimal Transfer Design} %-----------------------------%
 
