--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -2,7 +2,7 @@
 
 % conclusion and future work slides
 
-\section*{}
+\section[Conclusion]{Conclusion and Publicaitons}
 \subsection*{Conclusion}
 
 \begin{frame} %-----------------------------%
