--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -1,6 +1,6 @@
 % !TEX Root = ../proposal.tex
-\section*{Future Research}
-\subsection*{Research Direction}
+\section[Future Research]{Proposed Future Research}
+\subsection[Objectives]{Research Direction}
 
 \begin{frame}[t]\frametitle{Research Objectives}
 
