--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,7 +1,7 @@
 % !TEX Root = ../proposal.tex
 
-\section*{Introduction}
-\subsection*{Electric Propulsion}  
+\section[Introduction]{Introduction}
+\subsection[Electric Propulsion]{Electric Propulsion}  
 
 \begin{frame} \label{slide:lowthrust_vehicles}%-----------------------------%
 \frametitle{Low-thrust vehicles} % electric propulsion
@@ -23,7 +23,7 @@
 \hyperlink{slide:propulsion}{\beamergotobutton{Ideal Rockets}}
 \end{frame}   %-----------------------------%
 
-\subsection*{Asteroid Missions}
+\subsection[Asteroid Missions]{Asteroid Missions}
 
 \begin{frame}{Asteroid Missions}
 \begin{itemize}
@@ -69,7 +69,7 @@
 
 \end{frame}
 
-\subsection*{Spacecraft Autonomy}
+\subsection[Spacecraft Autonomy]{Spacecraft Autonomy}
 % why study the coupled attitude/translational problem
 
 \begin{frame}[t]{Spacecraft Autonomy} %-----------------------------%
