--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -1,7 +1,7 @@
 % !TEX Root = ../proposal.tex
 
-\section{Prior Research}
-\subsection{Reachability Set for Orbital Transfers}
+\section[Prior Research]{Research into spacecraft mission design}
+\subsection[Reachability Sets]{Orbital transfers via Reachability Sets}
 
 \begin{frame}{Orbital Transfers} % -----------------------------------%
     \begin{itemize}
@@ -26,7 +26,7 @@
   }
 \end{frame} %--------------------------------------%
 
-\subsubsection[]{Dynamic Systems Theory}
+\subsubsection[Dynamic Systems Theory Review]{Dynamic Systems}
 
 \begin{frame}{\Poincare map}
 \begin{itemize}
@@ -186,7 +186,7 @@
 
 \end{frame} %--------------------------------------%
 
-\subsection[]{Optimal Control Problem}
+\subsection[Formulating the optimal control problem]{Optimal Control Problem}
 
 \begin{frame}{Optimal Control Problem}
 \begin{itemize}
@@ -311,7 +311,7 @@
 \end{frame}
 
 % results from 2015 AAS
-\subsection[]{Transfer Examples}
+\subsection[Transfer examples using Reachability Sets]{Transfer Examples}
 
 \begin{frame}[t]{Orbital Transfers via Reachability Sets}
     \begin{itemize}
@@ -330,7 +330,7 @@
     \end{itemize}
 \end{frame}
 
-\subsubsection[]{Three Body Problem}
+\subsubsection[Circular Restricted Three Body Problem]{Three Body Problem}
 
 \begin{frame}%--------------------------------------------%
 \frametitle{Three Body Problem}
@@ -398,7 +398,7 @@
 
 \end{frame} %--------------------------------------------%
 
-\subsubsection[]{Asteroid transfers}
+\subsubsection[Transfers about 4769 Castalia]{Asteroid transfers}
 
 % Results from 2016 AAS
 \begin{frame}{Transfer Objective} %-----------------------------%
@@ -456,7 +456,7 @@
 
 \end{frame}
 
-\subsection{Constrained Attitude Control}
+\subsection[Autonomous Spacecraft attitude control with obstacles]{Constrained Attitude Control}
 
 
 % Results from 2016 ACC
@@ -585,7 +585,7 @@
 
 \end{frame}%---------------------------------------%
 
-\subsubsection[]{Hardware Implementation}
+\subsubsection[Quadrotor attitude control]{Hardware Implementation}
 
 \begin{frame}{Hexrotor Experiment} %-----------------------------%
 \begin{itemize}
