--- a/tex/thesis_statement.tex
+++ b/tex/thesis_statement.tex
@@ -1,7 +1,7 @@
 % !TEX Root = ../proposal.tex
 
-\section*{Research Description}
-\subsection*{Thesis}
+\section[Problem Description]{Research Description}
+\subsection[Thesis]{Thesis Statement}
 
 % THESIS STATEMENT - entire dissertation should support and defend this statement
 \begin{frame}[t]{Proposed research}
@@ -20,7 +20,7 @@
 
 \end{frame}
 
-\subsection*{Research Goals}
+\subsection[Research Goals]{Research Goals}
 
 \begin{frame}[t]{Asteroid mission design} % -----------------------------------%
   \begin{itemize}
