Add controls to animations and remove draft option

--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -482,8 +482,8 @@
 \end{itemize}
 
 \begin{center}
-  \animategraphics[draft,autoplay,loop,width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{30}{animation/2016AAS/body/IMG}{00001}{01499}~\hfill
-  \animategraphics[draft,autoplay,loop,width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{30}{animation/2016AAS/inertial/IMG}{00001}{01499}
+  \animategraphics[controls,autoplay,loop,width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{30}{animation/2016AAS/body/IMG}{00001}{01499}~\hfill
+  \animategraphics[controls,autoplay,loop,width=0.5\textwidth,height=0.7\textheight,keepaspectratio]{30}{animation/2016AAS/inertial/IMG}{00001}{01499}
 \end{center}
 
 \end{frame}
@@ -558,7 +558,7 @@
         A(R,R_d) = \frac{1}{2} \tr{G \left( I - R_d^T R\right)} .
     \end{align*}
     \begin{center} 
-        \includegraphics[draft,height=0.6\textheight]{figures/2016ACC/attract_error.pdf}
+        \includegraphics[height=0.6\textheight]{figures/2016ACC/attract_error.pdf}
     \end{center}
 }
 
@@ -596,8 +596,8 @@
 \end{itemize}
 
 \begin{center}
-    \animategraphics[draft,autoplay,loop,width=0.5\textwidth]{8}{animation/2016ACC/single_noavoid/single_noavoid-}{0}{99}~
-    \animategraphics[draft,autoplay,loop,width=0.5\textwidth]{8}{animation/2016ACC/single_avoid/single_avoid-}{0}{99}
+    \animategraphics[controls,autoplay,loop,width=0.5\textwidth]{8}{animation/2016ACC/single_noavoid/single_noavoid-}{0}{99}~
+    \animategraphics[controls,autoplay,loop,width=0.5\textwidth]{8}{animation/2016ACC/single_avoid/single_avoid-}{0}{99}
 \end{center}
 
 \end{frame}%-----------------------------%
@@ -612,7 +612,7 @@
 \end{itemize}
 
 \begin{center}
-    \animategraphics[draft,autoplay,loop,width=0.5\textwidth]{8}{animation/2016ACC/multiple_avoid/multiple_avoid-}{0}{99}
+    \animategraphics[controls,autoplay,loop,width=0.5\textwidth]{8}{animation/2016ACC/multiple_avoid/multiple_avoid-}{0}{99}
 \end{center}
 
 \end{frame}%---------------------------------------%
