Add some notes to thesis slides

--- a/tex/thesis_statement.tex
+++ b/tex/thesis_statement.tex
@@ -18,6 +18,10 @@
         \end{itemize}
     \end{itemize}
 
+\note[itemize]{
+    \item Allows us to study the true motion of the system
+    \item Avoids the complexities or loss of detail by using other representations
+}
 \end{frame}
 
 \subsection[Research Goals]{Research Goals}
@@ -40,6 +44,8 @@
   \end{itemize}
 
   \note[itemize]{
+    \item Our dissertation/research combines two key components: reachability set design and coupled attitude dynamics
+    \item Geometric mechanics provides a consistent framework to consider interaction between attitude and translational dynamics
     \item Reachability set avoids the need to pick initial conditions
     \item We compute on a lower dimensional surface
   }
