Shrink animation so buttons fit on screen

--- a/tex/prior_work.tex
+++ b/tex/prior_work.tex
@@ -673,7 +673,7 @@
 \end{itemize}
 
 \begin{center}
-    \animategraphics[controls,autoplay,loop,width=0.5\textwidth]{8}{animation/2016ACC/multiple_avoid/multiple_avoid-}{0}{99}
+    \animategraphics[controls,autoplay,loop,width=0.5\textwidth,height=0.5\textheight,keepaspectratio]{8}{animation/2016ACC/multiple_avoid/multiple_avoid-}{0}{99}
 \end{center}
 
 \end{frame}%---------------------------------------%
