Add notes to future slides

--- a/tex/future_work.tex
+++ b/tex/future_work.tex
@@ -31,4 +31,8 @@
             \item Accurate and stable numerical integration
         \end{itemize}
     \end{block}
+
+    \note[itemize]{
+    \item Now we discuss some areas of focus for the rest of my research
+    }
 \end{frame}
