--- a/tex/timeline.tex
+++ b/tex/timeline.tex
@@ -3,7 +3,7 @@
 
 \begin{frame}[t]\frametitle{Research Timeline}
 \begin{center}
-    \includegraphics[width=\textwidth,height=0.9\textheight,keepaspectratio]{figures/timeline.pdf} 
+    \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{figures/timeline.pdf} 
 \end{center}
     
 \end{frame}
