Add hyperlink back to main presentation

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -368,6 +368,7 @@ Momentum transfer from solar photons striking spacecraft
     All minimal attitude representations have kinematic singularities and are not suitable for large rotations.
 \end{block}
 
+\hyperlink{slide:attitude_control}{\beamergotobutton{Attitude Control}}
 \end{frame}
 
 \begin{frame}[noframenumbering]{Attitude Parameterizations}
