Remove draft option from appendix animation

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -75,8 +75,8 @@
 }
 \only<3>{
 \begin{center}
-  \animategraphics[draft,autoplay,loop,width=0.5\textwidth]{30}{animation/2016AAS/castalia/IMG}{00001}{00999}~\hfill
-  \includegraphics[draft,width=0.5\textwidth]{figures/2016AAS/radius_contour.pdf}
+  \animategraphics[controls,autoplay,loop,width=0.5\textwidth]{30}{animation/2016AAS/castalia/IMG}{00001}{00999}~\hfill
+  \includegraphics[width=0.5\textwidth]{figures/2016AAS/radius_contour.pdf}
 \end{center}
 }
 
