--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -18,7 +18,7 @@
         \item Completely avoids singularities and ambiguities
         \item Geometrically exact and computationally efficient
     \end{itemize}
-    \item<3-> \Emph{Asteroid landing} requires the development of a coupled approach 
+    \item<3-> \Emph{Asteroid landing} requires the coupled approach 
     \begin{itemize}
         \item Global mission scenarios are possible
         \item Dynamics derived in a consistent and geometrically exact framework
